<package format="2">
    <name>estimation</name>
    <version>0.0.1</version>
    <description>
        This package performs estimation of drone states
    </description>
    <maintainer email="kuya@gwu.edu">Kuya Takami</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <exec_depend>rospy</exec_depend>
</package>
